--- a/package.json
+++ b/package.json
@@ -6,14 +6,34 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.1.7",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.1.7",
+        "postcss": "^8.5.4",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@tailwindcss/forms": "^0.5.10",
         "alpinejs": "^3.14.9"
-    }
+    },
+    "name": "mzuzu-university-weekend-timetabling-system",
+    "version": "1.0.0",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/caekali/Mzuzu-University-Weekend-Timetabling-System.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/caekali/Mzuzu-University-Weekend-Timetabling-System/issues"
+    },
+    "homepage": "https://github.com/caekali/Mzuzu-University-Weekend-Timetabling-System#readme"
 }
