--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite --host=0.0.0.0"
+        "dev": "vite"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.21",
