--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Mzuzu University Weekend Timetabling System"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -59,7 +59,7 @@ MAIL_PASSWORD=caf62a0884a5c0
 # MAIL_PORT=2525
 # MAIL_USERNAME=null
 # MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="ictwts@my.mzuni.ac.mw"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -69,3 +69,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+ADMIN_EMAIL=admin@my.mzuni.ac.mw
+ADMIN_PASSWORD=password
