--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "@ryangjchandler/alpine-tooltip": "^2.0.1",
         "@tailwindcss/forms": "^0.5.10",
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "tippy.js": "^6.3.7"
     },
     "name": "mzuzu-university-weekend-timetabling-system",
     "version": "1.0.0",
