Refactor user and timetable components: implement search functionality in UserList; update FullTimetable and VersionManagerDrawer for better version management; enhance ConstraintModal with dynamic day selection; improve .env.example for mail configuration.

--- a/.env.example
+++ b/.env.example
@@ -48,19 +48,18 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=31545ba2df3b82
-MAIL_PASSWORD=caf62a0884a5c0
-
+MAIL_HOST=127.0.0.1
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
 # MAIL_MAILER=log
 # MAIL_SCHEME=null
-# MAIL_HOST=127.0.0.1
-# MAIL_PORT=2525
-# MAIL_USERNAME=null
-# MAIL_PASSWORD=null
+
 MAIL_FROM_ADDRESS="ictwts@my.mzuni.ac.mw"
 MAIL_FROM_NAME="${APP_NAME}"
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
