--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME="Mzuzu University Weekend Timetabling System"
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_NAME="Mzuzu University ICT Weekend Timetabling System"
+APP_ENV=production
+APP_KEY=base64:j1lohhEtkTKSaf+kHlxoMEbJlONk76LCcFP0/CBpH3E=
+APP_DEBUG=false
 APP_URL=http://localhost
+# APP_URL=https://0f5ea15d818e.ngrok-free.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -25,7 +26,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=mzuzu_university_weekend_timetabling_system
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -47,6 +49,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 MAIL_MAILER=smtp
 MAIL_HOST=127.0.0.1
 MAIL_PORT=1025
@@ -60,7 +63,6 @@ MAIL_FROM_ADDRESS="ictwts@my.mzuni.ac.mw"
 MAIL_FROM_NAME="${APP_NAME}"
 
 
-
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -68,6 +70,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_DEV_SERVER=false
 
 ADMIN_EMAIL=admin@my.mzuni.ac.mw
 ADMIN_PASSWORD=password
