--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
         "mallardduck/blade-lucide-icons": "^1.23",
+        "spatie/laravel-backup": "^9.3",
         "wireui/wireui": "^2.4"
     },
     "require-dev": {
